# npu-sim

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  README_CN.md  how
.github/workflows/: worker.yaml
DRAMSys/: CMakeLists.txt
DRAMSys/configs/: DDR4_100GB.json  DDR4_120GB_new.json  DDR4_150GB.json  DDR4_40GB.json  DDR4_60GB.json  DDR4_60GB_new.json  ddr4-example-16bit.json  ddr4-example-df.json  gpu_hbm2.json  hbm2-example.json  hbm3-example.json
DRAMSys/configs/addressmapping/: ADDRMAP_120GB.json  ADDRMAP_60GB.json  am_ddr4_8x4Gbx8_df.json  am_hbm2_gpu.json  am_hbm3_8Gb_pc_brc.json
DRAMSys/configs/memspec/: DDR4_100GB.json  DDR4_40GB.json  DDR4_60GB.json  HBM2_GPU.json  HBM2_WSC.json  JEDEC_4Gb_DDR4-1866_8bit_DF.json  MEMSPEC_120GB.json  MEMSPEC_60GB.json  MICRON_4Gb_DDR4-1866_16bit_A.json
DRAMSys/configs/simconfig/: example.json  gem5_se.json
DRAMSys/src/simulator/: main.cpp
doc/: README.md  requirements.txt
doc/source/: conf.py  index.rst
doc/source/getting_started/: config_core.rst  installation.rst  quickstart.rst
llm/: npusim.cpp
llm/config_generation/: CMakeLists.txt  config_gen.cpp  test.json
llm/include/common/: config.h  display.h  include.h  memory.h  msg.h  pd.h  system.h
llm/include/defs/: const.h  enums.h  global.h
llm/include/link/: base_component.h  chip_config_helper.h  chip_global_memif_nb.h  chip_global_memory.h  chip_task_context.h  config_base.h  config_chip.h  config_cluster_base.h  config_node.h  config_node_base.h  config_top.h  global_mem_interface.h  monitor_chip.h  monitor_top.h  naive_link_interface.h  nb_global_memif.h  nb_global_memif_v2.h  nvlink_packet.h
llm/include/macros/: macros.h
llm/include/memory/: MemoryManager_v2.h  dramsys_wrapper.h  mem_if.h  ram.h  rom.h  sram_writer.h
llm/include/monitor/: config_helper_base.h  config_helper_core.h  config_helper_gpu.h  config_helper_gpu_pd.h  config_helper_gpu_pds.h  config_helper_pd.h  config_helper_pds.h  config_tools.h  gpu_cache_system.h  mem_interface.h  monitor.h
llm/include/prims/: base.h  comp_base.h  comp_prims.h  gpu_base.h  gpu_prims.h  moe_base.h  moe_prims.h  norm_prims.h  pd_base.h  pd_prims.h  prim_base.h
llm/include/router/: router.h
llm/include/trace/: Event_engine.h  Trace_event.h  Trace_event_queue.h
llm/include/unit_module/dram_kvtable/: CMakeLists.txt  dram_kvtable.cpp  dram_kvtable.h  main.cpp
llm/include/unit_module/sram_manager/: CMakeLists.txt  main.cpp  sram_manager.cpp  sram_manager.h
llm/include/utils/: config_utils.h  display_utils.h  file_utils.h  memory_utils.h  msg_utils.h  pe_utils.h  prim_utils.h  print_utils.h  router_utils.h  simple_flags.h  system_utils.h
llm/include/workercore/: workercore.h
llm/link/: chip_global_memory.h  config_base.h  config_chip.h  config_cluster_base.h  config_link_base.h  config_node.h  config_node_base.h  config_top.h
llm/src/common/: config.cpp  gpu.cpp  memory.cpp  sram.cpp
llm/src/defs/: const.cpp  global.cpp
llm/src/link/: chip_config_helper.cpp  chip_global_memory.cpp  chip_task_context.cpp  config_chip.cpp  config_node.cpp  config_top.cpp  global_mem_interface.cpp  monitor_chip.cpp  monitor_top.cpp  nvlink_packet.cpp
llm/src/memory/: MemoryManager.cpp  dramsys_wrapper.cpp
llm/src/monitor/: config_helper_base.cpp  config_helper_core.cpp  config_helper_gpu.cpp  config_helper_gpu_pd.cpp  config_helper_gpu_pds.cpp  config_helper_pd.cpp  config_helper_pds.cpp  mem_interface.cpp  monitor.cpp
llm/src/router/: router.cpp
llm/src/trace/: Event_engine.cpp  Trace_event.cpp
llm/src/utils/: config_utils.cpp  display_utils.cpp  pe_utils.cpp  (+8 more)
llm/test/: CMakeLists.txt  autodelete.sh  autotest.sh  change_parse_input.py  config_dcache_base.json  config_gpt2_as_layer.json  config_gpt2_as_layer_dahu.json  config_gpt2_large.json  config_gpt2_medium.json  config_gpt2_medium_tp_2.json  config_gpt2_medium_tp_4.json  config_gpt2_medium_tp_8.json  config_gpt2_new.json  config_gpt2_small.json  config_gpt2_small_autoconfig.json  config_gpt2_small_cluster.json  config_gpt2_small_cluster_backup.json  config_gpt2_small_cluster_backup0518.json  config_gpt2_small_cluster_single_chip.json  config_gpt2_small_pd_fuse_12*1.json  config_gpt2_small_pd_fuse_4*3.json  config_gpt2_small_pd_fuse_6*2.json  config_gpt2_small_pd_naive.json  config_gpt2_small_pd_split.json  config_gpt2_small_tp_2.json  config_gpt2_small_tp_24.json  config_gpt2_small_tp_24_Deprecated.json  config_gpt2_small_tp_24_new.json  config_gpt2_small_tp_24_new_cluster copy.json  config_gpt2_small_tp_24_new_cluster.json  config_gpt2_small_tp_4.json  config_gpt2_small_tp_8.json  config_gpt2_small_tp_Deprecated.json  config_gpt2_tiny_cluster.json  config_gpt_2.json  config_gpu_proto.json  config_llama3.1_8B_tp_2.json  config_pd_sim.json  config_qwen2.5_0.5B_tp_2.json  config_qwen2.5_0.5B_tp_4.json  (+31 more)
llm/unittest/: load_config.cpp  npusim.cpp
plot/: dram_time.py  find_id.py  gpu_bw.py  gpu_bw2.py  pd_fuse_memory_pipeline.py  pd_fuse_mono.py  plot_gpu_cachehit.py  plot_sram_util.py  qwen_bundle_20.py  tp_dimention.py  tp_mapping.py
plot/pdhete/: 1.txt.baiduyun.uploading.cfg  10_analysis_results.json  11_analysis_results.json  1_analysis_results.json  3.txt.baiduyun.uploading.cfg  3_analysis_results.json  4.txt.baiduyun.uploading.cfg  4_analysis_results.json  5.txt.baiduyun.uploading.cfg  5_analysis_results.json  6.txt.baiduyun.uploading.cfg  6_analysis_results.json  7.txt.baiduyun.uploading.cfg  7_analysis_results.json  8.txt.baiduyun.uploading.cfg  8_analysis_results.json  8_analysis_results.json.baiduyun.uploading.cfg  9.txt.baiduyun.uploading.cfg  9_analysis_results.json  base_analysis_results.json  calculate_single.py  draw_single.py  split.py
plot/vs/: P-D disaggregation(heter_case2).json  P-D disaggregation(heter_case7).json  P-D disaggregation(homo).json  P-D fusion.json  calculate_single.py  draw_throughput.py  final_draw.py
scripts/: run_test.sh  run_test_df.sh  run_test_df_time.sh
streaming_trace_viewer/: generate_llm_input.py  main.py  trace.json
streaming_trace_viewer/static/: index.html  timeline.js
(+434 files in other folders)
